--- a/unit3/typography/style.css
+++ b/unit3/typography/style.css
@@ -1,7 +1,9 @@
 @import "css/main.css";
-@import "css/typography-2.css";
+@import "css/typography-3.css";
 
 /* typographic pairing 1 */
 @import url('https://fonts.googleapis.com/css2?family=Oswald&family=Raleway:ital@0;1&display=swap');
 /* typographic pairing 2 */
 @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Lato&display=swap');
+/* typographic pairing 3 */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Pacifico&display=swap');
